Fix Chromium 11's NTP uncollapsed apps not in a grid

--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_sections.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_sections.scss
@@ -66,7 +66,9 @@
 		}
 		&:not(.collapsed) {
 			+ div {
+				display: grid;
 				gap: 0px;
+				grid-template-columns: repeat(6, minmax(0, 1fr));
 
 				.item {
 					border-radius: 10px;
